--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,5 +1,46 @@
-html,
 body {
-  margin: 0;
-  padding: 0;
+  padding-top: 5vh;
+}
+
+.input-area {
+  display: flex;
+  justify-content: space-between;
+  min-height: 100px;
+
+  #drop-area {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1.4px dashed gray;
+    margin-right: 10px;
+
+    .icon {
+      font-size: 80px;
+      line-height: 80px;
+      color: cornflowerblue;
+    }
+  }
+
+  #log {
+    flex: 1;
+  }
+}
+
+#loading {
+  margin-top: 5vh;
+}
+
+.output-area {
+  display: flex;
+  margin-top: 5vh;
+
+  #result {
+    width: 100%;
+
+    table {
+      width: 100%;
+    }
+  }
 }
